# pass-import

./: .bandit  .codeclimate.yml  .coveragerc  .doc.py  .gitignore  .gitlab-ci.yml  .prospector.yaml  .travis.yml  .updatedoc.py  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  import.bash  pass-import.1  pass_import.py  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: main.yml
build-deb/: README.md  build-now.sh
completion/: pass-import.bash  pass-import.zsh  pimport.bash
debian/: changelog  control  copyright  rules  watch
docs/: .updatedoc.py  pass-import.1  pimport.1  updatedoc.py
importers/: 1password2pass.rb  chrome2pass.py  enpass2pass.rb  fpm2pass.pl  gorilla2pass.rb  kedpm2pass.py  keepass2csv2pass.py  keepass2pass.py  keepassx2pass.py  kwallet2pass.py  lastpass2pass.rb  password-exporter2pass.py  pwsafe2pass.sh  revelation2pass.py  roboform2pass.rb
lib/: import.py
pass_import/: __about__.py  __init__.py  __main__.py  audit.py  auto.py  clean.py  core.py  detecter.py  errors.py  manager.py  tools.py
pass_import/decrypters/: __init__.py  gpg.py
pass_import/formats/: __init__.py  cli.py  csv.py  json.py  kdbx.py  otp.py  sphinx.py  xml.py  yaml.py
pass_import/managers/: __init__.py  aegis.py  andotp.py  applekeychain.py  bitwarden.py  blur.py  buttercup.py  chrome.py  clipperz.py  csv.py  dashlane.py  encryptr.py  enpass.py  myki.py  (+30 more)
scripts/: import.bash  pimport
share/: __init__.py  __main__.py
tests/: .coveragerc  .gitignore  .prospector.yaml  00_import.sh  00_pass.py  01_sanitychecks.sh  05_msg.py  10_managers.py  20_importers.py  30_pass_import.py  40_import.sh  50_sanitychecks.sh  Makefile  __init__.py  aggregate-results  commons.py  commons.sh  config.yml  importers.yml  runtests  setup  setup.py  sharness  test_audit.py  test_clean.py  test_decrypter.py  test_detect.py  test_format.py  test_import.sh  test_importers.py  test_managers.py  test_msg.py  test_open.py  test_pass.py  test_pass_import.py  test_sanitychecks.sh  test_tools.py  tests.yml
(+195 files in other folders)
