[metadata]
name = pass-import
version = 3.5
description = A pass extension for importing data from most of the existing password manager.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
url = https://github.com/roddhjav/pass-import
author = Alexandre Pujol
author_email = alexandre@pujol.io
project_urls =
    Documentation=https://github.com/roddhjav/pass-import
    Source=https://github.com/roddhjav/pass-import
    Issues=https://github.com/roddhjav/pass-import/issues
    Changelog=https://github.com/roddhjav/pass-import/blob/master/CHANGELOG.md
keywords = 
    password-store
    password
    pass
    pass-extension
    password-manager
    importer
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security :: Cryptography

[options]
python_requires = >=3.7
zip_safe = True
packages =
    pass_import
    pass_import.decrypters
    pass_import.formats
    pass_import.managers
install_requires =
    pyaml
    zxcvbn
    requests

[options.entry_points]
console_scripts =
    pimport = pass_import.__main__:main

[options.extras_require]
xml =
    defusedxml
keepass =
    pykeepass
gnomekeyring =
    secretstorage
encrypted_otp = 
    cryptography
decrypt =
    file-magic
filter =
    jsonpath-ng
all =
    defusedxml
    pykeepass
    secretstorage
    cryptography
    file-magic
    jsonpath-ng

